update article controller
