# app/Http/Controllers/HomeController.php
@@ -12,22 +12,4 @@ class HomeController extends Controller
     {
         return view('welcome');
     }
-
-    public function store(Request $request)
-    {
-        //store article from form
-        $article = new Article();
-        $article->name = $request->name;
-        $article->description = $request->description;
-        $article->status = null;
-        $article->categories(
-            //insertar el name de la categoria según $request->category separado por coma
-
-
-        );
-        dd($request->category, $article->categories());
-        $article->save();
-
-        back()->withSuccess('Article added success!');
-    }
 }
