# app/Http/Resources/ArticleResource.php
@@ -20,8 +20,8 @@ class ArticleResource extends JsonResource
             'name' => $this->name,
             'description' => $this->description,
             'status' => $this->status,
-            'created_at' => $this->created_at,
-            'updated_at' => $this->updated_at,
+            'created_at' => $this->created_at->format('Y-m-d H:i:s'),
+            'updated_at' => $this->updated_at->format('Y-m-d H:i:s'),
             'categories' => CategoryResource::collection($this->whenLoaded('categories')),
         ];
     }
